Fix not showing custom select value

--- a/src/sass/base/select.scss
+++ b/src/sass/base/select.scss
@@ -5,6 +5,7 @@
   position: relative;
   cursor: pointer;
   padding: 0 20px 0 0;
+  font-size: 15px;
 }
 .ds-value {
   display: block;
